--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TriviaApp</string>
+    <string name="title_text">Trivia</string>
+    <string name="out_of_text">Question: 45/89</string>
 </resources>
