--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">TriviaApp</string>
     <string name="title_text">Trivia</string>
     <string name="out_of_text">Question: 45/89</string>
+    <string name="true_button">True</string>
+    <string name="false_button">False</string>
+    <string name="next_button">Next</string>
 </resources>
